--- a/testdata/deployment/deployment-perme-failed-1.yaml
+++ b/testdata/deployment/deployment-perme-failed-1.yaml
@@ -1,10 +1,13 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: hello-openshift
 spec:
   progressDeadlineSeconds: 30
   replicas: 2
+  selector:
+    matchLabels:
+      app: hello-openshift
   template:
     metadata:
       labels:
@@ -12,7 +15,7 @@ spec:
     spec:
       containers:
       - name: hello-openshift
-        image: openshift/hello-openshift:123
+        image: quay.io/openshifttest/hello-openshift@sha256:424e57db1f2e8e8ac9087d2f5e8faea6d73811f0b6f96301bc9429-no-exist
         resources:
           limits:
             cpu: 120m
