--- a/lib/rules/cli/4.4.yaml
+++ b/lib/rules/cli/4.4.yaml
@@ -177,11 +177,14 @@
     :from_literal: --from-literal=<value>
     :name: <value>
 :create_cronjob:
-  :cmd: oc create cronjob <name>
+  :cmd: oc create cronjob <name> <global_options> <options>
   :options:
     :allow_missing_template_keys: --allow-missing-template-keys=<value>
     :dry_run: --dry-run=<value>
+    :exec_command: <value>
+    :exec_command_arg: <value>
     :image: --image=<value>
+    :oc_opts_end: --
     :output: --output <value>
     :restart: --restart=<value>
     :save_config: --save-config=<value>
@@ -208,12 +211,15 @@
     :output: --output <value>
     :template: --template=<value>
 :create_job:
-  :cmd: oc create job <name>
+  :cmd: oc create job <name> <global_options> <options>
   :options:
     :allow_missing_template_keys: --allow-missing-template-keys=<value>
     :dry_run: --dry-run=<value>
+    :exec_command: <value>
+    :exec_command_arg: <value>
     :from: --from=<value>
     :image: --image=<value>
+    :oc_opts_end: --
     :output: --output <value>
     :save_config: --save-config=<value>
     :template: --template=<value>
