--- a/testdata/cloud/autoscaler-auto-tmpl.yml
+++ b/testdata/cloud/autoscaler-auto-tmpl.yml
@@ -15,6 +15,10 @@ spec:
             memory: 500Mi
             cpu: 500m
       restartPolicy: Never
+      tolerations:
+      - key: mapi
+        value: mapi_test
+        effect: NoSchedule
   backoffLimit: 4
   completions: 100
   parallelism: 100
