--- a/lib/rules/cli/4.4.yaml
+++ b/lib/rules/cli/4.4.yaml
@@ -588,6 +588,7 @@
     :image_stream: --image-stream=<value>
     :name: --name=<value>
     :source_spec: <value>
+    :strategy: --strategy=<value>
 :new_build:
   :cmd: oc new-build
   :options:
