--- a/lib/rules/cli/4.5.yaml
+++ b/lib/rules/cli/4.5.yaml
@@ -585,6 +585,7 @@
   :options:
     :app_repo: <value>
     :code: --code=<value>
+    :docker_image: --docker-image=<value>
     :image_stream: --image-stream=<value>
     :name: --name=<value>
     :source_spec: <value>
