--- a/testdata/logging/clusterlogging/example_indexmanagement.yaml
+++ b/testdata/logging/clusterlogging/example_indexmanagement.yaml
@@ -19,6 +19,7 @@ spec:
       redundancyPolicy: "ZeroRedundancy"
       resources:
         requests:
+          cpu: 100m
           memory: "1Gi"
       storage: {}
   visualization:
