--- a/tools/jenkins/slaves/Dockerfile.rhel7
+++ b/tools/jenkins/slaves/Dockerfile.rhel7
@@ -7,6 +7,7 @@ LABEL maintainer="AOS QE Team"
 
 RUN set -x && \
     yum repolist all && \
+    yum-config-manager --disable rhel-7-server-htb-rpms && \
     yum-config-manager --enable rhel-7-server-optional-rpms && \
     yum-config-manager --enable rhel-7-server-extras-rpms && \
     yum-config-manager --enable rhel-server-rhscl-7-rpms && \
