--- a/testdata/networking/sriov/sriovnetwork/static-sriovnetwork.yaml
+++ b/testdata/networking/sriov/sriovnetwork/static-sriovnetwork.yaml
@@ -1,27 +1,20 @@
-apiVersion: v1
-kind: Template
+apiVersion: sriovnetwork.openshift.io/v1
+kind: SriovNetwork
 metadata:
-  name: sriovnetwork-template
-objects:
-- apiVersion: sriovnetwork.openshift.io/v1
-  kind: SriovNetwork
-  metadata:
-    name: static-sriovnetwork
-    namespace: openshift-sriov-network-operator
-  spec:
-    ipam: |
-      {
-        "type": "static"
-      }
-    capabilities: |
-      {
-        "mac": true,
-        "ips": true
-      }
-    vlan: 0
-    spoofChk: "on"
-    trust: "off"
-    resourceName: intelnetdevice
-    networkNamespace: ${default}
-parameters:
-  - name: default
+  name: static-sriovnetwork
+  namespace: openshift-sriov-network-operator
+spec:
+  ipam: |
+    {
+      "type": "static"
+    }
+  capabilities: |
+    {
+      "mac": true,
+      "ips": true
+    }
+  vlan: 0
+  spoofChk: "on"
+  trust: "off"
+  resourceName: intelnetdevice
+  networkNamespace: default
