--- a/lib/rules/cli/4.5.yaml
+++ b/lib/rules/cli/4.5.yaml
@@ -1406,6 +1406,8 @@
     :etcd_version: !ruby/regexp '/etcd (.+)$/'
 :oadm_top_node:
   :cmd: oc adm top node
+  :options:
+    :node_name: <value>
 :oadm_top_specific_node:
   :cmd: oc adm top node <node_name>
 :registry_info:
