--- a/testdata/networking/sriov/sriovnetworkpolicy/mlx277-netdevice-without-mtu.yaml
+++ b/testdata/networking/sriov/sriovnetworkpolicy/mlx277-netdevice-without-mtu.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: openshift-sriov-network-operator
 spec:
   nicSelector:
+    deviceID: '1015'
     pfNames:
       - ens2f0
     rootDevices:
