--- a/testdata/networking/sriov/sriovnetworkpolicy/intel-netdevice-without-pf.yaml
+++ b/testdata/networking/sriov/sriovnetworkpolicy/intel-netdevice-without-pf.yaml
@@ -6,6 +6,7 @@ metadata:
 spec:
   deviceType: netdevice
   nicSelector:
+    deviceID: '158b'
     rootDevices:
       - '0000:3b:00.0'
     vendor: '8086'
