--- a/testdata/olm/catalogsource-template.yaml
+++ b/testdata/olm/catalogsource-template.yaml
@@ -14,6 +14,7 @@ objects:
     image: ${IMAGE}
     displayName: ${DISPLAYNAME}
     publisher: ${PUBLISHER}
+    imagePullPolicy: Always
 
 parameters:
 - name: NAME
