fix oc logs for SDN, add --all-containers and --prefix options
a `kube-rbac-proxy` container was added to the sdn pod,
so the regular `oc logs -l app=sdn` command won't work
anymore, we need to either specify the container or
use `--all-containers=true`

```
STDERR:
error: a container name must be specified for pod sdn-w7bwn, choose one of: [sdn kube-rbac-proxy]
```

--- a/lib/rules/cli/4.4.yaml
+++ b/lib/rules/cli/4.4.yaml
@@ -537,10 +537,12 @@
 :logs:
   :cmd: oc logs <resource_name>
   :options:
+    :all_containers: --all-containers=<value>
     :c: -c <value>
     :f: -f
     :limit-bytes: --limit-bytes <value>
     :p: -p
+    :prefix: --prefix=<value>
     :since: --since <value>
     :since-time: --since-time <value>
     :tail: --tail <value>
