allow metering to be installed into other namespace other than the default

--- a/testdata/metering/configs/metering_operatorgroup.yaml
+++ b/testdata/metering/configs/metering_operatorgroup.yaml
@@ -2,9 +2,9 @@ apiVersion: operators.coreos.com/v1
 kind: OperatorGroup
 metadata:
   name: metering-ocp-og
-  namespace: <%= project.name %>
+  namespace: <%= cb.metering_ns %>
   labels:
     app: metering-operatorgroup
 spec:
   targetNamespaces:
-  - <%= project.name %>
+  - <%= cb.metering_ns %>
