--- a/testdata/metering/configs/metering_subscription.yaml
+++ b/testdata/metering/configs/metering_subscription.yaml
@@ -2,7 +2,7 @@ apiVersion: operators.coreos.com/v1alpha1
 kind: Subscription
 metadata:
   name: metering-ocp-sub
-  namespace: <%= project.name %>
+  namespace: <%= cb.metering_ns %>
   labels:
     app: metering-sub
 spec:
