--- a/testdata/metering/configs/pv_metering.yaml
+++ b/testdata/metering/configs/pv_metering.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: pv-<%= project.name %>
+  name: pv-<%= cb.metering_ns %>
 spec:
   storageClassName: <%= cb.sc_name %>
   capacity:
