Fix the manifest issue

--- a/testdata/storage/secret/secret.yaml
+++ b/testdata/storage/secret/secret.yaml
@@ -3,6 +3,6 @@ kind: Secret
 metadata:
   name: mysecret
   type: Opaque
-  data:
-    password: t
-    username: t
+data:
+  username: YWRtaW4=
+  password: MWYyZDFlMmU2N2Rm
