Add rules for oc diff

--- a/lib/rules/cli/4.5.yaml
+++ b/lib/rules/cli/4.5.yaml
@@ -372,6 +372,12 @@
     :l: -l <value>
     :name: <value>
     :selector: --selector=<value>
+:diff:
+  :cmd: oc diff
+  :options:
+    :f: -f <value>
+    :force-conflicts: --force-conflicts=<value>
+    :l: -l <value>
 :edit:
   :cmd: oc edit
   :options:
