update clusterlogforwarder to namespaced resource

--- a/testdata/logging/logforwarding/rsyslog/insecure/rsyslogserver_configmap.yaml
+++ b/testdata/logging/logforwarding/rsyslog/insecure/rsyslogserver_configmap.yaml
@@ -20,3 +20,4 @@ data:
     }
     :programname, contains, "journal.system" /var/log/custom/infra.log
     :programname, contains, "k8s-audit.log" /var/log/custom/audit.log
+    :programname, contains, "openshift-audit.log" /var/log/custom/audit.log
