--- a/testdata/logging/clusterlogforwarder/multiple_receiver/clusterlogforwarder.yaml
+++ b/testdata/logging/clusterlogforwarder/multiple_receiver/clusterlogforwarder.yaml
@@ -1,7 +1,8 @@
 apiVersion: logging.openshift.io/v1
 kind: ClusterLogForwarder
 metadata:   
-  name: instance   
+  name: instance
+  namespace: openshift-logging
 spec:   
   outputs:     
   - name: fluentd-created-by-user
