--- a/lib/rules/cli/4.1.yaml
+++ b/lib/rules/cli/4.1.yaml
@@ -834,6 +834,8 @@
     :image: --image=<value>
     :limits: --limits=<value>
     :oc_opt_end: --
+    :exec_command: <value>
+    :exec_command_arg: <value>
     :overrides: --overrides=<value>
     :port: --port <value>
     :replicas: --replicas <value>
