update test ingresscontroller to use NodePort instead of HostNetwork

--- a/testdata/routing/operator/ingressctl-nsowner.yaml
+++ b/testdata/routing/operator/ingressctl-nsowner.yaml
@@ -9,13 +9,6 @@ spec:
   domain: nsowner.example.com
   replicas: 1
   endpointPublishingStrategy:
-    type: HostNetwork
+    type: NodePortService
   routeAdmission:
     namespaceOwnership: InterNamespaceAllowed
-  nodePlacement:
-    nodeSelector:
-      matchLabels:
-        beta.kubernetes.io/os: linux
-    tolerations:
-    - effect: NoSchedule
-      operator: Exists
