automate 4 test cases (#1608)
* automate 4 test cases

* update code

* fix review comments

* fixed review comments

--- a/lib/rules/cli/4.1.yaml
+++ b/lib/rules/cli/4.1.yaml
@@ -830,6 +830,8 @@
     :command: --command=<value>
     :dry_run: --dry-run
     :env: --env=<value>
+    :exec_command: <value>
+    :exec_command_arg: <value>
     :generator: --generator=<value>
     :image: --image=<value>
     :limits: --limits=<value>
