Provision Windows machine on vsphere, default machineset values to create it
Re-ordering examples

Improved time

--- a/testdata/cloud/ms-vsphere/ms_default_values.yaml
+++ b/testdata/cloud/ms-vsphere/ms_default_values.yaml
@@ -5,7 +5,7 @@ metadata:
     machine.openshift.io/cluster-api-cluster:
     machine.openshift.io/cluster-api-machine-role: worker
     machine.openshift.io/cluster-api-machine-type: worker
-  name: default-valued-33380
+  name: 
 spec:
   replicas: 1
   selector:
@@ -29,7 +29,7 @@ spec:
         value:
            network:
               devices:
-              - networkName: VM Network
+              - networkName: qe-segment 
            template:
            diskGiB:
            memoryMiB:
