--- a/testdata/networking/sriov/sriovnetworkpolicy/mlx277-netdevice.yaml
+++ b/testdata/networking/sriov/sriovnetworkpolicy/mlx277-netdevice.yaml
@@ -1,19 +1,18 @@
 apiVersion: sriovnetwork.openshift.io/v1
 kind: SriovNetworkNodePolicy
 metadata:
-  name: intel-netdevice
+  name: mlx277-netdevice
   namespace: openshift-sriov-network-operator
 spec:
-  deviceType: netdevice
+  mtu: 1800
   nicSelector:
-    deviceID: '158b'
+    deviceID: '1015'
     pfNames:
-      - ens1f0
+      - ens2f0
     rootDevices:
-      - '0000:3b:00.0'
-    vendor: '8086'
+      - '0000:60:00.0'
+    vendor: '15b3'
   nodeSelector:
     feature.node.kubernetes.io/sriov-capable: 'true'
-  numVfs: 5
-  priority: 99
-  resourceName: intelnetdevice
+  numVfs: 2
+  resourceName: mlx277netdevice
