--- a/testdata/logging/clusterlogforwarder/kafka/amq/21_job_topic_consumer_from_beginning_template.yaml
+++ b/testdata/logging/clusterlogforwarder/kafka/amq/21_job_topic_consumer_from_beginning_template.yaml
@@ -1,7 +1,7 @@
 kind: Template
 apiVersion: v1
 metadata:
-  name: amq-consumer
+  name: amq-consumer1
   annotations:
     description: "Deploy AMQ "
     tags: "amq-aosqe"
