--- a/testdata/logging/clusterlogforwarder/kafka/amq/21_job_topic_consumer_from_latest_template.yaml
+++ b/testdata/logging/clusterlogforwarder/kafka/amq/21_job_topic_consumer_from_latest_template.yaml
@@ -1,8 +1,7 @@
-#https://datacadamia.com/dit/kafka/kafka-console-consumer
 kind: Template
 apiVersion: v1
 metadata:
-  name: amq-consumer
+  name: amq-consumer2
   annotations:
     description: "Deploy AMQ "
     tags: "amq-aosqe"
