--- a/tools/Gemfile
+++ b/tools/Gemfile
@@ -1,4 +1,4 @@
-eval_gemfile File.expand_path(__FILE__ + "/../../Gemfile")
+eval File.read(File.expand_path(__FILE__ + "/../../Gemfile")), binding, "../Gemfile"
 
 gem 'asciidoctor'
 gem 'commander'
