--- a/testdata/deployment/deployment-with-service.yaml
+++ b/testdata/deployment/deployment-with-service.yaml
@@ -48,7 +48,7 @@ items:
           deploymentconfig: hello-openshift
       spec:
         containers:
-        - image: openshift/hello-openshift
+        - image: quay.io/openshifttest/hello-openshift@sha256:424e57db1f2e8e8ac9087d2f5e8faea6d73811f0b6f96301bc94293680897073
           name: hello-openshift
           ports:
           - containerPort: 8080
