Use images from quay.io

--- a/testdata/deployment/OCP-10873/dc.yaml
+++ b/testdata/deployment/OCP-10873/dc.yaml
@@ -18,7 +18,7 @@ spec:
       - args:
         - --conf
         - /etc/caddy/config/caddyfile.conf
-        image: aosqe/caddy-docker
+        image: quay.io/openshifttest/caddy-docker@sha256:a88247b9b2a35e0c0a9bc67506971a39fc5a0196b9a1d9ead49ae5fa4b48dfa5
         name: hello
         volumeMounts:
         - mountPath: /etc/serving-cert
