--- a/testdata/quota/ocp11779/pod-request-limit-valid-4.yaml
+++ b/testdata/quota/ocp11779/pod-request-limit-valid-4.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   containers:
   - name: pod-request-limit-valid-4
-    image: gcr.io/google_containers/nginx
+    image: quay.io/openshifttest/nginx
     resources:
       requests:
         cpu: "400m"
