--- a/testdata/secrets/ocp12338/secret-pod-nginx-2.yaml
+++ b/testdata/secrets/ocp12338/secret-pod-nginx-2.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   containers:
   - name: secret-pod-nginx-2
-    image: pweil/hello-nginx-docker
+    image: quay.io/openshifttest/hello-nginx-docker
     securityContext:
       privileged: true
     volumeMounts:
