--- a/testdata/cli/standalone-rc.yaml
+++ b/testdata/cli/standalone-rc.yaml
@@ -18,7 +18,7 @@ spec:
             - start
             - master
             - --config=/config/master-config.yaml
-          image: "openshift/origin"
+          image: "quay.io/openshift/origin"
           name: origin
           ports:
             - containerPort: 8443
