--- a/tools/jenkins/slaves/Dockerfile.rhel7
+++ b/tools/jenkins/slaves/Dockerfile.rhel7
@@ -5,6 +5,8 @@ FROM openshift3/jenkins-slave-base-rhel7:v3.11
 LABEL vendor="Red Hat inc."
 LABEL maintainer="AOS QE Team"
 
+ENV USER_PATHS="$HOME /etc/machine-id /etc/passwd /etc/pki"
+
 RUN set -x && \
     yum repolist all && \
     yum-config-manager --disable rhel-7-server-htb-rpms && \
@@ -55,7 +57,8 @@ RUN rpm -qa && \
 
 RUN dbus-uuidgen > /etc/machine-id # e.g. needed for firefox
 RUN chown -R 1001:0 $HOME && \
-    chmod -R g+rw $HOME /etc/machine-id /etc/passwd /etc/pki
+    chmod -R g=u $USER_PATHS && chmod -R g+rw $USER_PATHS
+
 # allow yum/dnf; but probably fakeroot would be needed and still some install
 # scripts may fail because of lack of real root
 #RUN dirs="/usr /etc /var /home /opt" && \
