--- a/testdata/logging/clusterlogforwarder/elasticsearch/insecure/clusterlogforwarder.yaml
+++ b/testdata/logging/clusterlogforwarder/elasticsearch/insecure/clusterlogforwarder.yaml
@@ -1,21 +1,29 @@
-apiVersion: logging.openshift.io/v1
-kind: ClusterLogForwarder
+kind: Template
+apiVersion: v1
 metadata:
-  name: instance
-  namespace: openshift-logging
-spec:
-  outputs:
-  - name: es-created-by-user
-    type: elasticsearch
-    url: 'http://elasticsearch-server.openshift-logging.svc:9200'
-    insecure: true
-  pipelines:
-  - name: forward-to-external-es
-    inputRefs:
-    - infrastructure
-    - application
-    - audit
-    labels:
-      forward-with-labels: test-labels
-    outputRefs:
-    - es-created-by-user
+  name: clusterlogforwarder-template
+objects:
+- apiVersion: logging.openshift.io/v1
+  kind: ClusterLogForwarder
+  metadata:
+    name: instance
+    namespace: openshift-logging
+  spec:
+    outputs:
+    - name: insecure-es
+      type: elasticsearch
+      url: "${URL}"
+      insecure: true
+    pipelines:
+    - name: forward-to-external-es
+      inputRefs:
+      - infrastructure
+      - application
+      - audit
+      labels:
+        forward-with-labels: forward-to-insecure-es
+      outputRefs:
+      - insecure-es
+parameters:
+- name: URL
+  value: "http://elasticsearch-server.openshift-logging.svc:9200"
