--- a/testdata/logging/clusterlogforwarder/rsyslog/rsys_clf_default.yaml
+++ b/testdata/logging/clusterlogforwarder/rsyslog/rsys_clf_default.yaml
@@ -1,21 +1,33 @@
-apiVersion: logging.openshift.io/v1      
-kind: ClusterLogForwarder      
-metadata:      
-  name: instance      
-  namespace: openshift-logging      
-spec:      
-  outputs:      
-    - name: rsyslog-created-by-user 
-      type: syslog      
-      syslog:      
-        facility: local0
-        severity: informational     
-      url: 'udp://rsyslogserver.openshift-logging.svc:514'      
-  pipelines:      
-    - name: forward-to-external-syslog      
-      inputRefs:      
-        - infrastructure      
-        - application      
-        - audit      
-      outputRefs:      
-        - rsyslog-created-by-user
+kind: Template
+apiVersion: v1
+metadata:
+  name: clusterlogforwarder-template
+objects:
+- apiVersion: logging.openshift.io/v1
+  kind: ClusterLogForwarder
+  metadata:
+    name: instance
+    namespace: openshift-logging
+  spec:
+    outputs:
+    - name: rsyslog-default
+      type: syslog
+      syslog:
+        facility: ${FACILITY}
+        severity: ${SEVERITY}
+      url: ${URL}
+    pipelines:
+    - name: forward-to-external-syslog
+      inputRefs:
+      - infrastructure
+      - application
+      - audit
+      outputRefs:
+      - rsyslog-default
+parameters:
+- name: URL
+  value: "udp://rsyslogserver.openshift-logging.svc:514"
+- name: FACILITY
+  value: "local0"
+- name: SEVERITY
+  value: "informational"
